# pylint-actions

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yml  example.yml  release.yml
examples/: __init__.py
pylint_actions/: __init__.py
