[tool.poetry]
name = "pylint-actions"
version = "0.4.0"
description = "Pylint plugin for GitHub Actions"
license = "MIT"
homepage = "https://github.com/skhomuti/pylint-actions"
repository = "https://github.com/skhomuti/pylint-actions"
keywords = ["pylint", "github", "actions", "linter", "static code analysis", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = ["skhomuti <skhomuti@gmail.com>"]
readme = "README.md"
packages = [
    {include = "pylint_actions"},
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.main]
load-plugins = "pylint_actions"
