[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylint-actions"
version = "0.6.0"
description = "Pylint plugin for GitHub Actions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
homepage = "https://github.com/skhomuti/pylint-actions"
repository = "https://github.com/skhomuti/pylint-actions"
keywords = ["pylint", "github", "actions", "linter", "static code analysis", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [{name = "skhomuti", email = "skhomuti@gmail.com"}]
dependencies = ["pylint>=3.0.3,<4"]
[project.optional-dependencies]
dev = ["pylint>=3.0.3,<4"]

[tool.hatch.build.targets.wheel]
packages = ["pylint_actions"]

[tool.pylint.main]
load-plugins = "pylint_actions"
